--- a/index.html
+++ b/index.html
@@ -3,4 +3,9 @@
     <head>
         <link href="style.css" rel="stylesheet"> 
     </head>
+    <body>
+        <h1>UR CUTE</h1>
+        <h1>I think youre cool</h1>
+        <h1>Youre kinda insane</h1>
+    </body>
 </html>
